--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="avatar"><img class="avatar" src="./avatar.png" /></div>
-    <div class="nickname">belowzero273</div>
+    <div class="nickname">BELOWZERO273</div>
     <div class="quote">הכל עובר, גם זה יעבור</div>
     <div class="buttons">
         <a class="tp-btn" href="https://www.linkedin.com/in/sergei-polunin/" target="_blank"><b>#РАБОТАЮ</b><br>Мой
