--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <div class="avatar"><img class="avatar" src="./avatar.png" /></div>
+    <div class="avatar"><img class="avatar" src="./avatar.png" alt="-273"/></div>
     <div class="nickname">BELOWZERO273</div>
     <div class="quote">הכל עובר, גם זה יעבור</div>
     <div class="buttons">
